@@ -23,7 +23,7 @@ Tiny.Editor = function(config) {
         ,frontend: false
         ,height: '400px'
         ,invalid_elements: ''
-        ,language: MODx.config.manager_language
+        ,language: MODx.config['manager_language']
         ,mode: 'none'
         ,nowrap: false
         ,path: Tiny.config.assets_path
@@ -48,7 +48,7 @@ Tiny.Editor = function(config) {
         ,theme_advanced_buttons2: MODx.config['tiny.custom_buttons2']
         ,theme_advanced_buttons3: MODx.config['tiny.custom_buttons3']
         ,theme_advanced_buttons4: MODx.config['tiny.custom_buttons4']
-        ,theme_advanced_blockformats: 'p,h1,h2,h3,h4,h5,h6,div,blockquote,code,pre,address'
+        ,theme_advanced_blockformats: MODx.config['tiny.blockformats']
         ,theme_advanced_resizing: false
         ,theme_advanced_resize_horizontal: false
         ,theme_advanced_statusbar_location: 'bottom'
